--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ matplotlib==3.2.1
 nltk==3.5
 mlflow==1.8.0
 Flask==1.1.2
-pymongo-3.10.1
+pymongo==3.10.1
 MarkupSafe==1.1.1
 Jinja2==2.11.2
 gunicorn==20.0.4
