--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ nltk==3.5
 mlflow==1.8.0
 nlpaug==0.0.14
 Flask==1.1.2
-pymongo-3.10.1
+pymongo==3.10.1
 MarkupSafe==1.1.1
 Jinja2==2.11.2
 gunicorn==20.0.4
@@ -18,7 +18,6 @@ Werkzeug==1.0.1
 six==1.14.0
 python-dateutil==2.8.1
 python-dotenv==0.13.0
-bson==0.5.9
 Flask-Cors==3.0.8
 Flask-PyMongo==2.3.0
 
